--- a/index.html
+++ b/index.html
@@ -230,43 +230,43 @@
 
             <li class="col-3-12 ae-6 fromCenter">
               <a href="#">
-                <img src="assets/img/inner-75-7.jpg" class="selected" title="Blue" alt="Image"/> 
+                <img src="assets/img/400_52.png" class="selected" title="Blue" alt="Image"/> 
               </a>
             </li>
 
             <li class="col-3-12 ae-3 fromCenter">
               <a href="#">
-                <img src="assets/img/inner-75-6.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/400_35.png" class="wide" alt="Image"/>
               </a>
             </li>
 
             <li class="col-3-12">
               <a href="#">
-                <img src="assets/img/inner-75-5.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/800_2.png" class="wide" alt="Image"/>
               </a>
             </li>
 
             <li class="col-3-12 ae-7 fromCenter">
               <a href="#">  
-                <img src="assets/img/inner-75-1.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/400_61.png" class="wide" alt="Image"/>
               </a>
             </li>
 
             <li class="col-3-12 ae-9 fromCenter">
               <a href="#">
-                <img src="assets/img/inner-75-3.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/400_27.png" class="wide" alt="Image"/>
               </a>
             </li>
 
             <li class="col-3-12 ae-5 fromCenter">
               <a href="#">
-                <img src="assets/img/inner-75-4.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/400_41.png" class="wide" alt="Image"/>
               </a>
             </li>
 
             <li class="col-3-12 ae-4 fromCenter">
               <a href="#">
-                <img src="assets/img/inner-75-2.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/400_54.png" class="wide" alt="Image"/>
               </a>
             </li>
 
@@ -287,54 +287,26 @@
       
         <ul class="slider inlineBlock clickable popupContent ae-1 fromCenter disableSelect" data-slider-id="75-1" style="display: inline-block;">
          <li class="selected">
-            <p>this collection is blue</p>
-            <img src="assets/img/inner-75-7.jpg" class="selected" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/400_52.png" class="selected" alt="Image"/>
+            <img src="assets/img/400_52_blog.png" alt="Image"/>
           </li>
           <li>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/400_35_evaw.png" alt="Image"/>
           </li>
           <li>
-            <img src="assets/img/inner-75-5.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/800_2.png" alt="Image"/>
           </li>
           <li>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/400_61.png" alt="Image"/>
           </li>
           <li>
-            <img src="assets/img/inner-75-3.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/400_27.png" alt="Image"/>
           </li>
           <li>
-            <img src="assets/img/inner-75-4.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/400_41_brick.png" alt="Image"/>
           </li>
           <li>
-            <img src="assets/img/inner-75-2.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-6.jpg" alt="Image"/>
-            <img src="assets/img/inner-75-1.jpg" alt="Image"/>
+            <img src="assets/img/400_54_happy.png" alt="Image"/>
           </li>
         </ul>
         
